2006-12-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/Makefile.am:
	Add gdp to SUBDIRS.

2006-12-05  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/converters/overlay/overlay.py:
	  Map old->new properties in overlay.

2006-12-05  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/admin.py
	(AdminClientFactory.clientConnectionFailed)
	(AdminClientFactory.__init__): Configurable tenacity level.
	(AdminModel.connectToHost): Take another argument, whether to keep
	trying in the face of errors.

	* flumotion/worker/worker.py
	(WorkerClientFactory.clientConnectionFailed): Log at level 4 when
	we can't connect.

	* flumotion/common/log.py (stderrHandler): Die if we get an EPIPE,
	so that closing stderr will make the process stop.

2006-12-05  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/converters/overlay/overlay.py:
	* flumotion/component/encoders/theora/theora.py:
	* flumotion/component/misc/httpfile/httpfile.py:
	* flumotion/component/producers/audiotest/audiotest.py:
	* flumotion/component/producers/webcam/webcam.xml:
	  More fallout from cleanup-1. Make things work, hopefully.

	* flumotion/wizard/steps.py:
	* data/glade/wizard_http.glade:
	  This code is deep voodoo. Prod to make http client-limit work again.

2006-12-04  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Change properties to new-style in do_check(), which runs earlier
	  than configure_pipeline(), so that the checks don't spuriously fail.

2006-12-04  Michael Smith  <msmith@fluendo.com>

	* flumotion/configure/configure.py:
	  Provide versionNum as a conveniently pre-parsed version number in
	  addition to the (string) version.

	* flumotion/manager/manager.py:
	  Add a warning for components with a different version number.

2006-12-04  Andy Wingo  <wingo@pobox.com>

	* flumotion/ui/glade.py (GladeWindow.with_blocked_signal)