@@ -1,3 +1,10 @@
+2006-12-07  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/worker/worker.py:
+	  Don't try to feed to a component which we don't know about.
+	  Fixes downstream components trying to reconnect to a stopped
+	  component.
+
 2006-12-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/producers/Makefile.am:
